<resources>
    <string name="app_name" translatable="false">BSBZ-App</string>
    <string name="app_name_long">Die BSBZ-App</string>
    <string name="powered_by" translatable="false">powered by M&#38;R Games</string>
    <string name="ok">OK</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="next">Weiter</string>
    <string name="cancel">Abbrechen</string>
    <string name="delete">Löschen</string>
    <string name="edit">Bearbeiten</string>
    <string name="open">Öffnen</string>
    <string name="close">Schließen</string>
    <string name="publish">Veröffentlichen</string>
    <string name="action_successful">Aktion erfolgreich abgeschlossen</string>
    <string name="action_failed">Aktion fehlgeschlagen, bitte erneut versuchen</string>
    <string name="error_occured_try_again">Fehler. Bitte erneut versuchen</string>
    <string name="title_activity_heute">Heute</string>
    <string name="title_activity_profil">Mein Profil</string>
    <string name="title_activity_diese_woche">Diese Woche</string>
    <string name="title_activity_bsbz">BSBZ-Infos</string>
    <string name="title_activity_entwickler">Die Entwickler</string>
    <string name="title_activity_homepage">Unsere Homepage</string>
    <string name="title_activity_splash_screen">Die BSBZ-App</string>
    <string name="title_activity_log_in">BSBZ-App - LogIn</string>
    <string name="title_activity_registration">BSBZ-App - Registrieren</string>
    <string name="title_activity_speiseplan">Speiseplan</string>
    <string name="title_activity_web">Laden #8230;</string>
    <string name="title_activity_day_details">Tagesdetails</string>
    <string name="title_activity_jahresplan">Jahresplan</string>
    <string name="title_activity_news">News</string>
    <string name="title_activity_stundenplan">Stundenplan</string>
    <string name="title_activity_details">Heute - Details</string>
    <string name="title_activity_settings">Einstellungen</string>
    <string name="title_activity_new_new">Neue New</string>
    <string name="title_activity_edit_new">New bearbeiten</string>
    <string name="navDrawer_opened">Offen</string>
    <string name="navDrawer_closed">Geschlossen</string>
    <string name="my_profile">Mein Profil</string>
    <string name="today">Heute</string>
    <string name="this_week">Diese Woche</string>
    <string name="plan_of_the_year">Jahresplan</string>
    <string name="news">News</string>
    <string name="food_plan">Speiseplan</string>
    <string name="gallery">Bildergalerie</string>
    <string name="bsbz_infos">BSBZ-Infos</string>
    <string name="the_developers">Die Entwickler</string>
    <string name="guest">Gast</string>
    <string name="guestmode">Gastmodus</string>
    <string name="offlinemode">Offlinemodus</string>
    <string name="copyright" translatable="false">© M&#38;R Games 2015 - 2017</string>
    <string name="press_again_to_exit_app">Erneut drücken um App zu beenden</string>
    <string name="press_again_to_exit_registration">WARNUNG: Eingetragene Daten gehen verloren</string>
    <string name="press_again_to_go_back_delete_entry">WARNUNG: Eintrag geht verloren</string>
    <string name="settings">Einstellungen</string>
    <string name="refresh">Synchronisieren</string>
    <string name="logout">Logout</string>
    <string name="finish">Beenden</string>
    <string name="name_">Name:</string>
    <string name="class_">Klasse:</string>
    <string name="percent_0" translatable="false">0 %</string>
    <string name="keine_termine_monat">Keine Termine in diesem Monat</string>
    <string name="keine_klassenarbeiten_monat">Keine Klassenarbeiten in diesem Monat!</string>
    <string name="keine_hausaufgaben_monat">Keine Hausaufgaben in diesem Monat!</string>
    <string name="keine_termine_heute">Heute stehen keine Termine an</string>
    <string name="keine_klassenarbeiten_heute">Heute stehen keine Klassenarbeiten an!</string>
    <string name="keine_hausaufgaben_heute">Heute stehen keine Hausaufgaben an!</string>
    <string name="keine_aktiven_news">Keine aktiven News gefunden</string>
    <string name="logoutInProgress">Logout wird ausgeführt ...</string>
    <string name="please_logIn">Bitte logge dich ein:</string>
    <string name="username">Benutzername</string>
    <string name="password">Passwort</string>
    <string name="confirm_password">Passwort bestätigen</string>
    <string name="login">LogIn</string>
    <string name="login_automatically">Nach der Registrierung automatisch einloggen</string>
    <string name="keep_logged_in">Angemeldet bleiben</string>
    <string name="registrate">Registrieren</string>
    <string name="open_bsbz_app">BSBZ-App öffnen</string>
    <string name="loading">Laden ...</string>
    <string name="loading_without_tripple_point">Laden</string>
    <string name="last_sync_loading">Letzte Synchronisation: Laden ...</string>
    <string name="give_feedback">Feedback geben</string>
    <string name="ideas_for_development">Ideen zur Weiterentwicklung</string>
    <string name="rights_">Rechte:</string>
    <string name="choose_class_actually">Klasse auswählen (Aktuell: 0000)</string>
    <string name="january">Januar</string>
    <string name="february">Februar</string>
    <string name="march">März</string>
    <string name="april">April</string>
    <string name="may">Mai</string>
    <string name="june">Juni</string>
    <string name="july">Juli</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">Oktober</string>
    <string name="november">November</string>
    <string name="december">Dezember</string>
    <string name="monthinfo_">Monatsinfos:</string>
    <string name="developer_mr_games">Entwickler: M&amp;R Games</string>
    <string name="email_mr_games">E-Mail: mrgames@outlook.de</string>
    <string name="homepage_mr_games">Homepage: www.mrgames13.jimdo.com</string>
    <string name="twitter_mr_games">Twitter: MR Games</string>
    <string name="facebook_mr_games">Facebook: MrGames</string>
    <string name="our_homepage">Unsere Homepage</string>
    <string name="help">Hilfe</string>
    <string name="more_apps">Mehr Apps von uns</string>
    <string name="monday">Montag</string>
    <string name="tuesday">Dienstag</string>
    <string name="wednesday">Mittwoch</string>
    <string name="thursday">Donnerstag</string>
    <string name="friday">Freitag</string>
    <string name="_monday_">\u0020\u0020\u0020\u0020\u0020Montag\u0020\u0020\u0020\u0020\u0020</string>
    <string name="_tuesday_">\u0020\u0020\u0020\u0020\u0020Dienstag\u0020\u0020\u0020\u0020\u0020</string>
    <string name="_wednesday_">\u0020\u0020\u0020\u0020\u0020Mittwoch\u0020\u0020\u0020\u0020\u0020</string>
    <string name="_thursday_">\u0020\u0020\u0020\u0020\u0020Donnerstag\u0020\u0020\u0020\u0020\u0020</string>
    <string name="_friday_">\u0020\u0020\u0020\u0020\u0020Freitag\u0020\u0020\u0020\u0020\u0020</string>
    <string name="monday_short">Mo</string>
    <string name="tuesday_short">Di</string>
    <string name="wednesday_short">Mi</string>
    <string name="thursday_short">Do</string>
    <string name="friday_short">Fr</string>
    <string name="timetable">Stundenplan</string>
    <string name="bsbz_homepage">BSBZ Homepage</string>
    <string name="kind_of_school_">Schulart:</string>
    <string name="class_level_">Klassenstufe:</string>
    <string name="kind_of_class_">Klassenart:</string>
    <string name="please_fill_all_fields">Bitte alle Felder ausfüllen</string>
    <string name="username_first_name_second_name">Nutzername (Vorname Nachname)</string>
    <string name="tap_to_coose_class">Tippen um Klasse zu wählen</string>
    <string name="description_is_loading">Beschreibung wird geladen ...</string>
    <string name="no_description_found">(Keine Beschreibung vorhanden)</string>
    <string name="classtests_">Klassenarbeiten:</string>
    <string name="homework_">Hausaufgaben:</string>
    <string name="events_">Termine:</string>
    <string name="bsbz_layout_orange">BSBZ Layout (orange)</string>
    <string name="layout">Layout</string>
    <string name="please_enter_your_password_">Bitte gib dein Passwort ein:</string>
    <string name="delete_account">Account löschen</string>
    <string name="wrong_password">Falsches Passwort</string>
    <string name="do_you_want_to_delete_your_account">Möchtest du deinen Account wirklich unwiederruflich mitsamt aller Daten löschen?</string>
    <string name="change_password">Passwort ändern</string>
    <string name="not_all_fields_filled">Es sind nicht alle Felder ausgefüllt</string>
    <string name="passwords_do_not_match">Die Passwörter stimmen nicht überein!</string>
    <string name="do_you_really_want_to_change_password">Möchtest du das Passwort dieses Accounts wirklich andern?</string>
    <string name="restart">Neustart?</string>
    <string name="changings_will_be_visible_after_restart">Damit die Änderung sichbar wird, benötigt die App einen Neustart. Soll dieser jetzt ausgeführt werden?</string>
    <string name="account_deleted_successfully">Account wurde erfolgreich gelöscht</string>
    <string name="account_deletion_failed">Account konnte nicht gelöscht werden</string>
    <string name="password_changed_successfully">Passwort wurde erfolgreich geändert</string>
    <string name="password_changing_failed">Passwort konnte nicht geändert werden</string>
    <string name="no_password">(Kein Passwort)</string>
    <string name="update_news">Update News!</string>
    <string name="update_available">Update der BSBZ-App wurde gefunden. Hier tippen um Update herunterzuladen.</string>
    <string name="so_much_schooltime_is_over_">So viel Schultag ist vorrüber:\u0020</string>
    <string name="recommend">App weiterempfehlen</string>
    <string name="subject">Betreff</string>
    <string name="descreption">Beschreibung</string>
    <string name="writer_">Verfasser:</string>
    <string name="timed_activation">Zeitgesteuerte Freischaltung</string>
    <string name="activation_">Freischaltung:</string>
    <string name="expiration_">Ablauf:</string>
    <string name="choose_date">Datum auswählen</string>
    <string name="choose_receiver_">Empfänger wählen ...</string>
    <string name="check_for_update">Auf Update prüfen</string>
    <string name="download_dir">Ordner herunterladen</string>
    <string name="download_image">Bild herunterladen</string>
    <string name="delete_folder">Ordner löschen</string>
    <string name="delete_image">Bild löschen</string>
    <string name="new_classtest">Neue Klassenarbeit</string>
    <string name="new_homework">Neue Hausaufgabe</string>
    <string name="new_event">Neuer Termin</string>
    <string name="edit_foodplan_m">Füge hier die URL zum PDF-Dokument des Speiseplans dieser Woche ein</string>
    <string name="edit_foodplan_h">Link einfügen</string>
    <string name="edit_foodplan_autumn">Herbstferien</string>
    <string name="edit_foodplan_winter">Winterferien</string>
    <string name="edit_foodplan_christmas">Weihnachtsferien</string>
    <string name="edit_foodplan_easter">Osterferien</string>
    <string name="edit_foodplan_pentecost">Pfinstferien</string>
    <string name="edit_foodplan_summer">Sommerferien</string>
    <string name="edit_foodplan_open">Speiseplan-Seite öffnen</string>
    <string name="paste">Zwischenablage einfügen</string>
    <string name="shortcut_disabled">Aktion deaktiviert</string>
    <string name="shortcut_settings_short">Einstellungen</string>
    <string name="shortcut_settings_long">BSBZ-App Einstellungen</string>
    <string name="shortcut_plan_of_the_year_short">Jahresplan</string>
    <string name="shortcut_plan_of_the_year_long">BSBZ-App Jahresplan</string>
    <string name="shortcut_foodplan_short">Speiseplan</string>
    <string name="shortcut_foodplan_long">BSBZ-App Speiseplan</string>
</resources>