<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mrgames13.jimdo.bsbz_app.MainActivity" >

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/refresh"
        android:icon="@drawable/ic_menu_refresh"
		app:showAsAction="always" />
    
    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        app:showAsAction="withText|ifRoom"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_check_for_update"
        android:orderInCategory="150"
        android:title="@string/check_for_update"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_recommend"
        android:orderInCategory="200"
        android:title="@string/recommend"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_finish"
        android:orderInCategory="250"
        android:title="@string/finish"
        app:showAsAction="never"/>
</menu>
